# framework

./: LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
examples/high_level/: callback_query_example.py  easy_bot.py  file_upload_example.py  formatting_example.py  generate_keyboard.py  inline_keyboard.py  load_blueprints.py  setup_middleware.py  simple_bot_example.py  upload_example.py  use_state_dispenser.py
examples/high_level/blueprints/: goodbyes.py  greetings.py
examples/low_level/: api_request_example.py  ctx_storage_example.py  error_handler_example.py  exception_manager_example.py
telefone/: __init__.py  modules.py
telefone/api/: __init__.py  abc.py  api.py
telefone/api/request_rescheduler/: abc.py  blocking.py
telefone/api/request_validator/: __init__.py  translate_friendly_types_validator.py
telefone/api/response_validator/: __init__.py  abc.py  json_validator.py  telegram_api_error_validator.py
telefone/api/utils/: __init__.py  file_util.py  token_util.py
telefone/exception_factory/: __init__.py  code_exception.py
telefone/exception_factory/error_handler/: error_handler.py
telefone/exception_factory/swear_handler/: swear_handler.py
telefone/framework/: __init__.py  abc.py  abc_blueprint.py  bot.py  bot_blueprint.py
telefone/framework/blueprint/: __init__.py  abc.py  bot.py
telefone/framework/dispatch/: __init__.py
telefone/framework/dispatch/dispenser/: __init__.py  abc.py  default.py
telefone/framework/dispatch/handler/: abc.py  func.py
telefone/framework/dispatch/labeler/: __init__.py  abc.py  default.py
telefone/framework/dispatch/middleware/: base.py
telefone/framework/dispatch/return_manager/: __init__.py  base.py  message.py
telefone/framework/dispatch/router/: __init__.py  abc.py  base.py
telefone/framework/polling/: __init__.py  abc.py  default.py
telefone/http/: __init__.py  default.py
telefone/tools/: __init__.py  auto_reload.py  ctx_tool.py  loop_wrapper.py
telefone/tools/dev/: __init__.py  auto_reload.py  loop_wrapper.py
telefone/tools/keyboard/: markup.py
telefone/tools/mini_types/: __init__.py  message.py
telefone/tools/storage/: abc.py  ctx_storage.py
telefone/tools/text/: emoji.py  parse_mode.py
(+24 files in other folders)
