[tool.poetry]
name = "telefone"
version = "0.4.post1"
description = "A modern Telegram Bot API framework built with speed and stability in mind"
authors = []
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/telefone/"
repository = "https://github.com/telefone-org/framework"

[tool.poetry.dependencies]
python = "^3.8"
choicelib = "^0.1.5"
pydantic = "^1.9.0"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"
watchfiles = { version = "^0.15.0", optional = true }
vbml = "^1.1.post1"
telefone-types = "6.1.0.post5"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
loguru = "^0.6.0"
black = "^22.6.0"

[tool.poetry.extras]
auto-reload = ["watchfiles"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
